<resources>
    <string name="app_name">Pico Sense</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="start">Start Service</string>
    <string name="stop">Stop Service</string>
    <string name="humidity">Humidity</string>
    <string name="pressure">Pressure</string>
    <string name="temperature">Temperature</string>
    <string name="light">Light</string>
    <string name="accelerometer">Accelerometer</string>
    <string name="magnetic">Magnetic Field Strength</string>



</resources>
