<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <Button
        android:id="@+id/start"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/start"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:onClick="selfDestruct" />
    <Button
        android:id="@+id/stop"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/stop"
        android:layout_below="@id/start"
        android:layout_centerHorizontal="true"
        android:onClick="selfDestruct" />

    <CheckBox android:id="@+id/checkbox_humidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/humidity"
        android:layout_below="@id/stop"
        android:layout_centerHorizontal="true"
        android:onClick="onCheckboxClicked"/>

    <CheckBox android:id="@+id/checkbox_pressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pressure"
        android:layout_below="@id/checkbox_humidity"
        android:layout_centerHorizontal="true"
        android:onClick="onCheckboxClicked"/>

    <CheckBox android:id="@+id/checkbox_temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temperature"
        android:layout_below="@id/checkbox_pressure"
        android:layout_centerHorizontal="true"
        android:onClick="onCheckboxClicked"/>

    <CheckBox android:id="@+id/checkbox_light"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/light"
        android:layout_below="@id/checkbox_temperature"
        android:layout_centerHorizontal="true"
        android:onClick="onCheckboxClicked"/>
    <CheckBox android:id="@+id/checkbox_accelerometer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accelerometer"
        android:layout_below="@id/checkbox_light"
        android:layout_centerHorizontal="true"
        android:onClick="onCheckboxClicked"/>
    <CheckBox android:id="@+id/checkbox_magnetic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/magnetic"
        android:layout_below="@id/checkbox_accelerometer"
        android:layout_centerHorizontal="true"
        android:onClick="onCheckboxClicked"/>
</RelativeLayout>

